# MetaGather

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
bindings/python/pyi/: meta_gather.pyi
bindings/python/tests/: test_meta_gather.py
src/: lib.rs
